Fix out of bounds and performance problem

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Bubble';
+  src: url('../assets/fonts/balloon-font.otf');
+}
+
 .app {
     text-align: center;
     height: 100vh;
