--- a/src/app/pages/menu/menu.page.scss
+++ b/src/app/pages/menu/menu.page.scss
@@ -1,39 +1,96 @@
 .menu {
-    background: aliceblue;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100001;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 100%;
+    height: 100vh;
+    width: 100vw;
+    padding: 10vh 0;
+    filter: saturate(100%);
+}
+
+.background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background-image: url('../../../assets/images/balloon_background.png');
+    background-position: bottom left;
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: saturate(80%);
 }
 
 .start-button {
-    margin-bottom: 25%;
-    padding: 50px 25px;
-    background: deeppink;
+    height: 30vh;
+    width: 30vh;
+    font-family: 'Bubble';
+    font-size: 5vh;
+    background: rgba(255,20,147, 1);
     border: none;
-    border-radius: 50px;
+    border-radius: 100%;
     color: white;
-    font-weight: bold;
-    font-size: 1.5rem;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    animation: pulse 3s infinite;
+}
+
+.start-button.bounce {
+    animation: bouncing 0.5s cubic-bezier(.1,.25,.1,1) 0s infinite alternate both;
+    display: inline-block;
+    position: relative;
 }
 
 .title {
-    margin-top: 25%;
-    font-size: 3.5rem;
-    color: skyblue;
+    font-family: 'Bubble';
+    font-size: 9vh;
+    color: rgba(255,20,147, 1);
     -webkit-text-fill-color: white;
     -webkit-text-stroke: 1.5px deeppink;
+    animation: pulse 3s infinite;
+    animation-delay: 3s;
 }
 
-@keyframes pulse {
+@media (orientation: landscape) {}
+
+@keyframes boxShadowPulse {
     0% {
         box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1);
     }
 
-    100% {
+    79% {
         box-shadow: 0 0 0 15px rgba(0, 0, 0, 0.005);
     }
+
+    80% {
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+
+    33% {
+        transform: scale(1.05);
+    }
+
+    66% {
+        transform: scale(1.05);
+    }
+}
+
+@keyframes bouncing{
+  0%  {
+    bottom: 0;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+  }
+  100%{
+    bottom: 5vh;
+    box-shadow: 0 50px 50px rgba(0, 0, 0, 0.1);
+  }
 }
